# twitch_viewbots

./: .gitignore  pyproject.toml
core/: bot.py  http_client.py  proxies.py
tests/: test_proxies.py
