[tool.poetry]
name = "twitch_bot"
version = "0.1.0"
description = ""
authors = ["fritobag <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
aiohttp-socks = "^0.5.5"
m3u8 = "^0.7.1"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
